// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Axis [common] example testing should match snapshot(s) for 2.bottom 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,6V0H440V6"
  />
  <g
    key="0"
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      0
    </text>
  </g>
  <g
    key="20000"
    transform="translate(88, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      20,000
    </text>
  </g>
  <g
    key="40000"
    transform="translate(176, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      40,000
    </text>
  </g>
  <g
    key="60000"
    transform="translate(264, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      60,000
    </text>
  </g>
  <g
    key="80000"
    transform="translate(352, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      80,000
    </text>
  </g>
  <g
    key="100000"
    transform="translate(440, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      100,000
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 3.top 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,-6V0H360V-6"
  />
  <g
    key="0"
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={-9}
    >
      0
    </text>
  </g>
  <g
    key="20000"
    transform="translate(72, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={-9}
    >
      20,000
    </text>
  </g>
  <g
    key="40000"
    transform="translate(144, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={-9}
    >
      40,000
    </text>
  </g>
  <g
    key="60000"
    transform="translate(216, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={-9}
    >
      60,000
    </text>
  </g>
  <g
    key="80000"
    transform="translate(288, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={-9}
    >
      80,000
    </text>
  </g>
  <g
    key="100000"
    transform="translate(360, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={-9}
    >
      100,000
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 4.left 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M-6,180H0V0H-6"
  />
  <g
    key="0"
    transform="translate(0, 180)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform=""
      x={-9}
      y={0}
    >
      0
    </text>
  </g>
  <g
    key="10000"
    transform="translate(0, 162)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform=""
      x={-9}
      y={0}
    >
      10,000
    </text>
  </g>
  <g
    key="20000"
    transform="translate(0, 144)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform=""
      x={-9}
      y={0}
    >
      20,000
    </text>
  </g>
  <g
    key="30000"
    transform="translate(0, 126)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform=""
      x={-9}
      y={0}
    >
      30,000
    </text>
  </g>
  <g
    key="40000"
    transform="translate(0, 108)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform=""
      x={-9}
      y={0}
    >
      40,000
    </text>
  </g>
  <g
    key="50000"
    transform="translate(0, 90)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform=""
      x={-9}
      y={0}
    >
      50,000
    </text>
  </g>
  <g
    key="60000"
    transform="translate(0, 72)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform=""
      x={-9}
      y={0}
    >
      60,000
    </text>
  </g>
  <g
    key="70000"
    transform="translate(0, 54.000000000000014)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform=""
      x={-9}
      y={0}
    >
      70,000
    </text>
  </g>
  <g
    key="80000"
    transform="translate(0, 36)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform=""
      x={-9}
      y={0}
    >
      80,000
    </text>
  </g>
  <g
    key="90000"
    transform="translate(0, 18)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform=""
      x={-9}
      y={0}
    >
      90,000
    </text>
  </g>
  <g
    key="100000"
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform=""
      x={-9}
      y={0}
    >
      100,000
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 5.right 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M6,180H0V0H6"
  />
  <g
    key="0"
    transform="translate(0, 180)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform=""
      x={9}
      y={0}
    >
      0
    </text>
  </g>
  <g
    key="5"
    transform="translate(0, 162)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform=""
      x={9}
      y={0}
    >
      5
    </text>
  </g>
  <g
    key="10"
    transform="translate(0, 144)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform=""
      x={9}
      y={0}
    >
      10
    </text>
  </g>
  <g
    key="15"
    transform="translate(0, 126)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform=""
      x={9}
      y={0}
    >
      15
    </text>
  </g>
  <g
    key="20"
    transform="translate(0, 108)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform=""
      x={9}
      y={0}
    >
      20
    </text>
  </g>
  <g
    key="25"
    transform="translate(0, 90)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform=""
      x={9}
      y={0}
    >
      25
    </text>
  </g>
  <g
    key="30"
    transform="translate(0, 72)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform=""
      x={9}
      y={0}
    >
      30
    </text>
  </g>
  <g
    key="35"
    transform="translate(0, 54.000000000000014)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform=""
      x={9}
      y={0}
    >
      35
    </text>
  </g>
  <g
    key="40"
    transform="translate(0, 36)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform=""
      x={9}
      y={0}
    >
      40
    </text>
  </g>
  <g
    key="45"
    transform="translate(0, 18)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform=""
      x={9}
      y={0}
    >
      45
    </text>
  </g>
  <g
    key="50"
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform=""
      x={9}
      y={0}
    >
      50
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 6.time 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,6V0H360V6"
  />
  <g
    key="Thu Jan 01 2015 00:00:00 GMT+0000 (UTC)"
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      2015
    </text>
  </g>
  <g
    key="Wed Apr 01 2015 00:00:00 GMT+0000 (UTC)"
    transform="translate(42.51968503937008, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      April
    </text>
  </g>
  <g
    key="Wed Jul 01 2015 00:00:00 GMT+0000 (UTC)"
    transform="translate(85.51181102362204, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      July
    </text>
  </g>
  <g
    key="Thu Oct 01 2015 00:00:00 GMT+0000 (UTC)"
    transform="translate(128.97637795275588, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      October
    </text>
  </g>
  <g
    key="Fri Jan 01 2016 00:00:00 GMT+0000 (UTC)"
    transform="translate(172.44094488188978, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      2016
    </text>
  </g>
  <g
    key="Fri Apr 01 2016 00:00:00 GMT+0000 (UTC)"
    transform="translate(215.43307086614175, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      April
    </text>
  </g>
  <g
    key="Fri Jul 01 2016 00:00:00 GMT+0000 (UTC)"
    transform="translate(258.4251968503937, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      July
    </text>
  </g>
  <g
    key="Sat Oct 01 2016 00:00:00 GMT+0000 (UTC)"
    transform="translate(301.8897637795275, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      October
    </text>
  </g>
  <g
    key="Sun Jan 01 2017 00:00:00 GMT+0000 (UTC)"
    transform="translate(345.35433070866145, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      2017
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 6.time 2`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,6V0H360V6"
  />
  <g
    key="Thu Jan 01 2015 00:00:00 GMT+0000 (UTC)"
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      2015
    </text>
  </g>
  <g
    key="Wed Jul 01 2015 00:00:00 GMT+0000 (UTC)"
    transform="translate(85.51181102362204, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      July
    </text>
  </g>
  <g
    key="Fri Jan 01 2016 00:00:00 GMT+0000 (UTC)"
    transform="translate(172.44094488188978, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      2016
    </text>
  </g>
  <g
    key="Fri Jul 01 2016 00:00:00 GMT+0000 (UTC)"
    transform="translate(258.4251968503937, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      July
    </text>
  </g>
  <g
    key="Sun Jan 01 2017 00:00:00 GMT+0000 (UTC)"
    transform="translate(345.35433070866145, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      2017
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 6.time 3`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,6V0H360V6"
  />
  <g
    key="Thu Jan 01 2015 00:00:00 GMT+0000 (UTC)"
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      2015
    </text>
  </g>
  <g
    key="Fri Jan 01 2016 00:00:00 GMT+0000 (UTC)"
    transform="translate(172.44094488188978, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      2016
    </text>
  </g>
  <g
    key="Sun Jan 01 2017 00:00:00 GMT+0000 (UTC)"
    transform="translate(345.35433070866145, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      2017
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 7.ordinal 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,6V0H360V6"
  />
  <g
    key="a"
    transform="translate(45, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      a
    </text>
  </g>
  <g
    key="b"
    transform="translate(135, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      b
    </text>
  </g>
  <g
    key="c"
    transform="translate(225, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      c
    </text>
  </g>
  <g
    key="d"
    transform="translate(315, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      transform=""
      x={0}
      y={9}
    >
      d
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 8.diagonal-text 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,-6V0H440V-6"
  />
  <g
    key="0"
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={-9}
    >
      0
    </text>
  </g>
  <g
    key="20000"
    transform="translate(88, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={-9}
    >
      20,000
    </text>
  </g>
  <g
    key="40000"
    transform="translate(176, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={-9}
    >
      40,000
    </text>
  </g>
  <g
    key="60000"
    transform="translate(264, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={-9}
    >
      60,000
    </text>
  </g>
  <g
    key="80000"
    transform="translate(352, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={-9}
    >
      80,000
    </text>
  </g>
  <g
    key="100000"
    transform="translate(440, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={-9}
    >
      100,000
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 8.diagonal-text 2`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,6V0H440V6"
  />
  <g
    key="0"
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={9}
    >
      0
    </text>
  </g>
  <g
    key="20000"
    transform="translate(88, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={9}
    >
      20,000
    </text>
  </g>
  <g
    key="40000"
    transform="translate(176, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={9}
    >
      40,000
    </text>
  </g>
  <g
    key="60000"
    transform="translate(264, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={9}
    >
      60,000
    </text>
  </g>
  <g
    key="80000"
    transform="translate(352, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={9}
    >
      80,000
    </text>
  </g>
  <g
    key="100000"
    transform="translate(440, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={9}
    >
      100,000
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 8.diagonal-text 3`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M6,150H0V0H6"
  />
  <g
    key="0"
    transform="translate(0, 150)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={9}
    >
      0
    </text>
  </g>
  <g
    key="20000"
    transform="translate(0, 120)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={9}
    >
      20,000
    </text>
  </g>
  <g
    key="40000"
    transform="translate(0, 90)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={9}
    >
      40,000
    </text>
  </g>
  <g
    key="60000"
    transform="translate(0, 60)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={9}
    >
      60,000
    </text>
  </g>
  <g
    key="80000"
    transform="translate(0, 30)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={9}
    >
      80,000
    </text>
  </g>
  <g
    key="100000"
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      transform="rotate(-30)"
      x={9}
      y={9}
    >
      100,000
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 8.diagonal-text 4`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M-6,150H0V0H-6"
  />
  <g
    key="0"
    transform="translate(0, 150)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={-9}
    >
      0
    </text>
  </g>
  <g
    key="20000"
    transform="translate(0, 120)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={-9}
    >
      20,000
    </text>
  </g>
  <g
    key="40000"
    transform="translate(0, 90)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={-9}
    >
      40,000
    </text>
  </g>
  <g
    key="60000"
    transform="translate(0, 60)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={-9}
    >
      60,000
    </text>
  </g>
  <g
    key="80000"
    transform="translate(0, 30)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={-9}
    >
      80,000
    </text>
  </g>
  <g
    key="100000"
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      transform="rotate(-30)"
      x={-9}
      y={-9}
    >
      100,000
    </text>
  </g>
</g>
`;
